# SeriesScope

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_fixture.sqlite3  benchmark_monte_carlo.cpp  results.md
fixtures/: sample_teams.json
src/: CMakeLists.txt  main.cpp
src/app/: ApplicationCoordinator.cpp  ApplicationCoordinator.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  FixtureLoader.cpp  FixtureLoader.h  PlayerRepository.cpp  PlayerRepository.h  TeamRepository.cpp  TeamRepository.h
src/engine/: AwardEngine.cpp  AwardEngine.h  ExplanationEngine.cpp  ExplanationEngine.h  GameProbabilityModel.cpp  GameProbabilityModel.h  MonteCarloRunner.cpp  MonteCarloRunner.h  SeriesSimulator.cpp  SeriesSimulator.h
src/models/: AwardResult.h  FactorExplanation.h  PlayerProfile.h  ScenarioConfig.h  SimulationResult.h  TeamProfile.h
src/ui/: MainWindow.cpp  MainWindow.h  ResultsPanel.cpp  ResultsPanel.h  ScenarioControlsPanel.cpp  ScenarioControlsPanel.h  StyleSheet.h  TeamSelectionPanel.cpp  TeamSelectionPanel.h
src/utils/: StringUtils.h
tests/: CMakeLists.txt  test_award_engine.cpp  test_engine.cpp  test_player_repository.cpp  test_team_repository.cpp
tools/: derive_team_profiles.py  ingest_nba_data.py  requirements.txt  test_derive.py
